# LLM-Wiki-Cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CHAT_TRIGGER_RULES.md  LICENSE  LICENSE.md  LLM-Wiki-Cli-README.md  PRODUCTIZATION_PLAN_V1.md  QUICKSTART.md  README.md  RELEASE-CHECKLIST.md  RELEASE-EXECUTION-PLAN.md  WIKI_SCHEMA.md  index.md  log.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v0.1.0a1-MILESTONE-AUDIT.md
docs/: agent-operator-guide.md
examples/: README.md  decide-quantum-topic.json
sample-kb/: README.md  WIKI_SCHEMA.md  index.md
scripts/: README.md  __init__.py  build_wechat_assets_summary.py  enrich_wechat_assets_semantics.py  fetch_web_article.py  fetch_wechat_article.py  fokb.py  fokb_protocol.md  generate_topic_digest.py  ingest_any_url.py  ingest_result_enricher.py  ingest_web_direct_url.py  ingest_wechat_direct_url.py  maintain_wechat_knowledge_base.py  normalize_wechat_materials.py  source_index_manager.py  topic_maintainer.py  wiki_lint.py
sources/: index-template.md  index.md
tests/: test_agent.py  test_fetch_web_article.py  test_fokb.py  test_frontmatter.py  test_graph_builder.py  test_graph_extractors.py  test_graph_relevance.py  test_ingest_any_url.py  test_ingest_pipeline.py  test_ingest_result_enricher.py  test_ingest_topic_passthrough.py  test_ingest_web_direct_url.py  test_ingest_wechat_direct_url.py  test_maintenance_agent_profile.py  test_maintenance_artifact_findings.py  test_maintenance_batch_runner.py  test_maintenance_bundle_producer.py  test_objects.py  (+28 more)
(+215 files in other folders)
