[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wikify"
version = "0.1.0a1"
description = "Agent-facing CLI for maintaining and graphing a local Markdown knowledge base"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "xizhao" }
]
license = { file = "LICENSE" }

[project.scripts]
wikify = "wikify.cli:main"
fokb = "scripts.fokb:main"

[tool.setuptools]
packages = ["wikify", "wikify.graph", "scripts"]
