[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wikify"
version = "0.1.0a1"
description = "Turn links, files, repos, and notes into an agent-maintained local wiki"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "xizhao" }
]
license = { file = "LICENSE" }

[project.scripts]
wikify = "wikify.cli:main"
fokb = "scripts.fokb:main"

[tool.setuptools]
packages = ["wikify", "wikify.graph", "wikify.maintenance", "scripts"]
